--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,14 +4,21 @@ on:
   push:
     branches: [ main ]
 
+# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
+# Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
+# However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
+concurrency:
+  group: "pages"
+  cancel-in-progress: false
+
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
-
-    permissions:
-      contents: read
-      pages: write
-      id-token: write
 
     environment:
       name: github-pages
@@ -34,6 +41,13 @@ jobs:
       run: npm run build
       env:
         NODE_ENV: production
+
+    - name: List build output
+      run: |
+        echo "Contents of dist directory:"
+        ls -la dist/
+        echo "Contents of dist/index.html:"
+        head -20 dist/index.html
 
     - name: Setup Pages
       uses: actions/configure-pages@v4
